# sleep-scoring-demo

./: .actrc  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  README.md  actilife_batch_automation.py  compare_anglez.py  main.py  pyproject.toml  pytest.ini  requirements.txt  sleep-scoring-demo.spec  test_output.txt  test_watcher.sh  whats-next.md
.github/workflows/: build.yml
analyses/: 002-architecture-violations.md  003-redux-pattern-violations.md  004-code-duplication.md  architecture-compliance-review.md  architecture-review.md  comprehensive-app-review.md  test-quality-review.md
data/: .gitkeep
demo_data/activity/: DEMO-001_T1_G1_actigraph.csv  DEMO-001_T1_G1_actiwatch.csv  DEMO-001_T1_G1_axivity.csv  DEMO-001_T1_G1_geneactiv.csv  DEMO-001_T1_G1_generic.csv  DEMO-001_T1_G1_motionwatch.csv
demo_data/diary/: DEMO-001_sleep_diary.csv
demo_data/nonwear/: DEMO-001_nonwear_periods.csv
docker/: .env.example  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
docker/backend/: Dockerfile  Dockerfile.ci  Dockerfile.local
docker/frontend/: Dockerfile  Dockerfile.dev  nginx.conf
docs/: ARCHITECTURE.md  EXPORT_SYSTEM_BUG_AUDIT.md  FEATURE_AUDIT_REPORT.md  FILE_INVENTORY.md  REMOTE_SERVER_TRANSITION_GUIDE.md  WEB_APP_STATUS.md
docs/archive/: 2025-01-feature-parity-plan-completed.md
frontend/: .gitignore  bunfig.toml  playwright.config.ts
frontend/e2e/: auth.spec.ts  diary.spec.ts  export.spec.ts  files.spec.ts  keyboard-shortcuts.spec.ts  marker-tables.spec.ts  metrics-panel.spec.ts  navigation.spec.ts  nonwear-visualization.spec.ts  scoring-page.spec.ts  settings-persistence.spec.ts
frontend/playwright-report/: index.html
frontend/server/: build.ts  dev.ts
frontend/src/: App.tsx  index.css  main.tsx
prompts/: 001-fix-data-alignment-architecture.md  006-fix-basedpyright-warnings.md
prompts/completed/: 001-comprehensive-app-review.md  002-architecture-layer-violations.md  002-architecture-review.md  002-codebase-audit-dead-code-and-guidelines.md  002-feature-bug-audit.md  002-fix-all-broken-connector-patterns.md  002-fix-database-facade-tests.md  002-fix-plot-and-restructure-tabs.md  002-review-test-quality.md  003-export-system-bug-audit.md  003-fix-service-algorithm-tests.md  003-redux-pattern-compliance.md  003-test-export-functionality.md  004-code-duplication-redundancy.md  004-fix-e2e-tests-add-marker-workflow.md  005-find-architecture-violations.md  007-deep-architecture-review.md
sleep_scoring_app/: __init__.py  __main__.py  app_bootstrap.py  main.py
sleep_scoring_app/cli/: __init__.py
sleep_scoring_app/core/: constants.py  dataclasses.py  dataclasses_analysis.py  dataclasses_config.py  dataclasses_daily.py  dataclasses_diary.py  dataclasses_markers.py  exceptions.py  legacy_algorithms.py  nonwear_data.py  validation.py
sleep_scoring_app/data/: config.py  database.py  database_schema.py  migration_cli.py  migrations.py  migrations_registry.py
sleep_scoring_app/io/: __init__.py
sleep_scoring_app/preprocessing/: __init__.py  calibration.py  imputation.py
sleep_scoring_app/services/: __init__.py  algorithm_service.py  batch_scoring_service.py  cache_service.py  csv_data_transformer.py  data_loading_service.py  data_query_service.py  data_service.py  diary_mapper.py  diary_service.py  epoching_service.py  export_service.py  file_format_detector.py  file_management_service.py  file_service.py  format_detector.py  import_progress_tracker.py  import_service.py  import_worker.py  marker_service.py  memory_service.py  metrics_calculation_service.py  nonwear_import_worker.py  nonwear_service.py  nwt_correlation_service.py  pattern_validation_service.py  protocols.py  ui_state_coordinator.py  unified_data_service.py
sleep_scoring_app/ui/: algorithm_compatibility_ui.py  analysis_tab.py  column_selection_dialog.py  config_dialog.py  data_settings_tab.py  diary_integration.py  export_dialog.py  export_tab.py  file_navigation.py  main_window.py  marker_table.py  protocols.py  shortcut_manager.py  store.py  store_connectors.py  study_settings_tab.py  time_fields.py  window_state.py
sleep_scoring_app/utils/: __init__.py  calculations.py  column_registry.py  config.py  config_builder.py  date_range.py  participant_extractor.py  profiling.py  resource_resolver.py  table_helpers.py  thread_safety.py
sleep_scoring_app/web/: PROGRESS.md  __init__.py  benchmark_api.py
sleep_scoring_web/: __init__.py  auth_setup.py  config.py  main.py
sleep_scoring_web/api/: __init__.py  activity.py  auth.py  deps.py  diary.py  export.py  files.py  markers.py  settings.py
sleep_scoring_web/db/: __init__.py  models.py  session.py
sleep_scoring_web/schemas/: __init__.py  enums.py  models.py
sleep_scoring_web/services/: __init__.py  export_service.py  file_watcher.py  metrics.py
tests/: conftest.py
tests/demo_data/: __init__.py  conftest.py  test_activity_loading.py  test_diary_loading.py  test_integration.py  test_nonwear_loading.py  test_participant_extraction.py
tests/edge_cases/: test_switching_error_scenarios.py
tests/fixtures/: __init__.py  batch_scoring_fixtures.py  export_fixtures.py
validation/: check_ggir_epochs.R  check_read_gt3x.R  compare_5sec_epochs.py  compare_cole_kripke_actilife.py  compare_ggir_python.py  compare_v3_v5_ggir.py  cross_validate_sadeh_colekripke.py  debug_chunk_alignment.py  debug_epoch_count.py  debug_epoch_count2.py  debug_force_tz.py  debug_force_tz2.py  debug_force_tz3.py  debug_hasib_alignment.py  debug_p1093_boundary_detail.py  debug_p1093_mismatches.py  debug_p1093_timegaps.py  debug_v4.py  debug_v5_anglez.py  debug_z_angle.py  extract_1078_anglez.R  extract_cal_1078.R  extract_cal_from_rdata.R  extract_ggir_anglez.R  extract_ggir_hasib.R  extract_ggir_raw_anglez.R  extract_ggir_sib.R  extract_sib_1078_new.R  investigate_p1_1093.py  quick_p1093_test.py  reprocess_p1_1078.R  run_ggir_hasib.R  run_ggir_sleep.R  test_all_files_v3.py  test_anglez_v3.py  test_anglez_v3_quick.py  test_chrono_tz.py  test_dst_fix.py  test_end_to_end_gt3x.py  test_r_dst.R  (+11 more)
(+352 files in other folders)
